# Gerencimento-de-Tarefas-

./: README.md  database.db  main.py  pyproject.toml
